removed overflow property in css from innerdiv and added space right after gannt_chart - #415 - Solved

--- a/RevenuePlanner/Content/css/style.css
+++ b/RevenuePlanner/Content/css/style.css
@@ -84,7 +84,7 @@ body.gradient {
 }
 
 #content_wraper {
-    overflow: auto;
+    /*overflow: auto;*/ /* edited by KAPIL - #415 */
     background: #fff;
     min-height: 100%;
     height: auto !important;
